# Final_Baseball

./: .gitignore  README.md  main.py  pyproject.toml
Notebooks/지소윤/: 0.애매한 팀 찾기.ipynb  1.데이터수집.ipynb  2.데이터_전처리.ipynb  3.EDA.ipynb  4.심층분석.ipynb  5.simulation.ipynb  6.ml.ipynb  데이터수집pipline.ipynb  모델 후보.md
Notebooks/지소윤/baseball_kinematics/: download_strikeouts.py  download_walks.py  leiter_kinematics_analysis.ipynb  pose_extractor_yolo.py  pose_preprocessor.py  release_detector.py  run_analysis.py  run_batch_pose.py  trim_videos.py  visualize_analysis.py
Notebooks/지소윤/baseball_kinematics/_archive/: auto_labeler.py  baseball.py  classifier.py  combine_analysis.py  kinematics.py  kinematics_batter.py  labeler.py  obp_labeler.py  phase_classifier.py  segment_extractor.py
